fix broken dropdown overlapping click behaviour, fix unreliable resize event

--- a/module/src/components/dropdown/dropdown.basic.scss
+++ b/module/src/components/dropdown/dropdown.basic.scss
@@ -17,7 +17,7 @@ $arm-dropdown-height: 240px;
   width: $arm-dropdown-width;
   min-width: $arm-dropdown-min-width;
   overflow: auto;
-  max-height: $arm-dropdown-height;
+  max-height: min(#{$arm-dropdown-height}, calc(100vh - #{$spacing-medium * 2}));
   user-select: none;
   z-index: 2;
 }
